fix the meniu and logo size on mobile

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -44,8 +44,8 @@
 
 @media (min-width: 769px) and (max-width: 1024px) {
   .header {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
   .headerh1 {
     padding-right: 0;
