--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,14 +1,17 @@
+.navbar {
+  width: 102%;
+}
 .nav{
     background-color: #EDF1F3;
-    padding-bottom: 2%;
 }
 
-.nav li {
-    margin-right: 10px;
-}
-
-@media (max-width: 320px) and (min-width: 320px) {
-    .navbar{
-        width: 102%;
+@media (min-width: 1680) {
+    .nav{
+        background-color: #EDF1F3;
+        padding-bottom: 2%;
+    }
+    
+    .nav li {
+        margin-right: 10px;
     }
 }
